# WES_Analysis_11340_9740

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  load_uv.sh  load_uv_env.sh  pyproject.toml
WES_Analysis_11340_9740/: __init__.py  combine_gene_references.py  dataset.py  extract_tables_pdf.py  features.py  plots.py  reformat_GWAS_table.py
WES_Analysis_11340_9740/modeling/: predict.py  train.py
config/: reference_genes.yaml
contrib/: deploy_dna-seq-varlociraptor_v5.16.0.sh
docs/: README.md  filtering.md  individual_analysis.md  mkdocs.yml  qc.md
docs/archive/: outcomes_and_pitfalls.md  timeline.md
docs/docs/: getting-started.md  index.md
references/: 20250724_combined_info.tsv  README.md
references/2024_stuttering_associated/: 2024_stuttering_associated.xlsx
references/2025_denovo_coding_variants/: README.md  denovo_coding_variants_paper.tsv  denovo_coding_variants_paper.xlsx
references/bedfiles/: GOI.txt  GWAS_GOI.bed  extract_GOI.sh  extracted_GOI.bed  gene_annotation.bed  paper_undefined_gene.bed
references/genes/: 20250529_GeneCards-ADHD.csv  20250529_GeneCards-Autism.csv  20250529_GeneCards-Parkinsons.csv  20250529_GeneCards-Tic.csv  README.md
references/papers_combined/: 20250825_GWAS_protein_and_2024_combined_reformatted_for_search.xlsx
references/pathways/: README.md
references/stuttering_paper_GWAS/: 20250728_stuttering_paper_combined_only.tsv  reformatted.xlsx  stuttering_paper_combined_only.xlsx  stuttering_paper_combined_only_reformatted.tsv  stuttering_paper_combined_only_reformatted.xlsx  (+1 more)
(+3 files in other folders)
