[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "WES_Analysis_11340_9740"
version = "0.0.1"
description = "Multisample WES grouping"
authors = [
  { name = "Jim Delproposto" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"
dependencies = [
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "ruff>=0.11.7",
]


[tool.ruff]
line-length = 99
src = ["WES_Analysis_11340_9740"]
include = ["pyproject.toml", "WES_Analysis_11340_9740/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["WES_Analysis_11340_9740"]
force-sort-within-sections = true

